# skywatch-ai

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/skills/adr/: SKILL.md
configs/: detect.yaml  export.yaml  track.yaml
docs/: ROADMAP.md
docs/superpowers/specs/: 2026-04-04-adr-skill-design.md
scripts/: benchmark.py  detect.py  export.py  track.py
src/models/: __init__.py  detector.py  export.py  onnx_detector.py  postprocessing.py  preprocessing.py  schema.py
src/tracking/: __init__.py  schema.py  tracker.py  video_io.py  video_pipeline.py
src/utils/: __init__.py  logger.py  visualization.py
tests/: conftest.py  test_detector.py  test_export.py  test_logger.py  test_onnx_detector.py  test_postprocessing.py  test_preprocessing.py  test_schema.py  test_track_visualization.py  test_tracker.py  test_tracking_schema.py  test_video_io.py  test_video_pipeline.py  test_visualization.py
